{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 468,
  "lineage": "f10d2365-70ae-e753-90a5-d7f8403623b6",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_nodeport",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 30000,
            "id": "sgrule-4140785418",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d6cda0395eac6e94",
            "security_group_rule_id": "sgr-0fcf1495bcc9307f3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_eks_cluster.eks_cluster",
            "module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.aws_iam_role_policy_attachment.eks_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.eks_AmazonEKSServicePolicy",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc1",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "data",
      "type": "kubernetes_ingress_v1",
      "name": "backend_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/rewear-ingress",
            "metadata": [
              {
                "annotations": {
                  "alb.ingress.kubernetes.io/listen-ports": "[{\"HTTP\":80}]",
                  "alb.ingress.kubernetes.io/scheme": "internet-facing",
                  "alb.ingress.kubernetes.io/target-type": "ip",
                  "argocd.argoproj.io/tracking-id": "rewear-backend:networking.k8s.io/Ingress:default/rewear-ingress",
                  "kubernetes.io/ingress.class": "alb"
                },
                "generation": 1,
                "labels": {},
                "name": "rewear-ingress",
                "namespace": "default",
                "resource_version": "6658",
                "uid": "7d90f007-53ba-4fea-9311-59a6fb90b019"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "alb",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "backend-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "k8s-default-rewearin-0a7424be06-799665222.us-east-1.elb.amazonaws.com",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ]
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.internet-gw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772062958:internet-gateway/igw-01c8419ebeaa4698b",
            "id": "igw-01c8419ebeaa4698b",
            "owner_id": "724772062958",
            "tags": {
              "Name": "rewear-igw"
            },
            "tags_all": {
              "Name": "rewear-igw"
            },
            "vpc_id": "vpc-09f1d2042f755c79d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "data",
      "type": "aws_lb",
      "name": "rewear_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:724772062958:loadbalancer/app/k8s-default-rewearin-0a7424be06/1e8897aaa880304d",
            "arn_suffix": "app/k8s-default-rewearin-0a7424be06/1e8897aaa880304d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "k8s-default-rewearin-0a7424be06-799665222.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:724772062958:loadbalancer/app/k8s-default-rewearin-0a7424be06/1e8897aaa880304d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "k8s-default-rewearin-0a7424be06",
            "preserve_host_header": false,
            "security_groups": [
              "sg-043af042c5ec354e5",
              "sg-06d52d719ed4bbeae"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01e3307f98dabeec6"
              },
              {
                "subnet_id": "subnet-0eaac2d0c61128313"
              }
            ],
            "subnets": [
              "subnet-01e3307f98dabeec6",
              "subnet-0eaac2d0c61128313"
            ],
            "tags": {
              "elbv2.k8s.aws/cluster": "rewear-eks-cluster",
              "ingress.k8s.aws/resource": "LoadBalancer",
              "ingress.k8s.aws/stack": "default/rewear-ingress"
            },
            "vpc_id": "vpc-09f1d2042f755c79d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772062958:route-table/rtb-052cc5435e70525b8",
            "id": "rtb-052cc5435e70525b8",
            "owner_id": "724772062958",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rewear-private-route-table"
            },
            "tags_all": {
              "Name": "rewear-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f1d2042f755c79d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772062958:route-table/rtb-03559cac5a80888e7",
            "id": "rtb-03559cac5a80888e7",
            "owner_id": "724772062958",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c8419ebeaa4698b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rewear-public-route-table"
            },
            "tags_all": {
              "Name": "rewear-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f1d2042f755c79d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet-gw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092205d3587049cef",
            "route_table_id": "rtb-052cc5435e70525b8",
            "subnet_id": "subnet-04cf37c35fc01635e"
          },
          "dependencies": [
            "module.route-table.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc1",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07348690b3012ef07",
            "route_table_id": "rtb-052cc5435e70525b8",
            "subnet_id": "subnet-0fd02f3d619400255"
          },
          "dependencies": [
            "module.route-table.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc1",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f04978ead8b0d74",
            "route_table_id": "rtb-03559cac5a80888e7",
            "subnet_id": "subnet-01e3307f98dabeec6"
          },
          "dependencies": [
            "module.internet-gw.aws_internet_gateway.igw",
            "module.route-table.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc1",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aaf93a4a8ee24e00",
            "route_table_id": "rtb-03559cac5a80888e7",
            "subnet_id": "subnet-0eaac2d0c61128313"
          },
          "dependencies": [
            "module.internet-gw.aws_internet_gateway.igw",
            "module.route-table.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc1",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security-grp",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772062958:security-group/sg-04f52fa05d07b515a",
            "description": "Security group for rewear",
            "egress": [],
            "id": "sg-04f52fa05d07b515a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "rewear-sg",
            "name_prefix": "",
            "owner_id": "724772062958",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09f1d2042f755c79d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772062958:subnet/subnet-04cf37c35fc01635e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cf37c35fc01635e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772062958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rewear-private-0"
            },
            "tags_all": {
              "Name": "rewear-private-0"
            },
            "vpc_id": "vpc-09f1d2042f755c79d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc1",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772062958:subnet/subnet-0fd02f3d619400255",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd02f3d619400255",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772062958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rewear-private-1"
            },
            "tags_all": {
              "Name": "rewear-private-1"
            },
            "vpc_id": "vpc-09f1d2042f755c79d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc1",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772062958:subnet/subnet-01e3307f98dabeec6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e3307f98dabeec6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "724772062958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rewear-public-0"
            },
            "tags_all": {
              "Name": "rewear-public-0"
            },
            "vpc_id": "vpc-09f1d2042f755c79d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc1",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772062958:subnet/subnet-0eaac2d0c61128313",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eaac2d0c61128313",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "724772062958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rewear-public-1"
            },
            "tags_all": {
              "Name": "rewear-public-1"
            },
            "vpc_id": "vpc-09f1d2042f755c79d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc1",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772062958:vpc/vpc-09f1d2042f755c79d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cffc00913182ac9e",
            "default_route_table_id": "rtb-034838307ec4cbc59",
            "default_security_group_id": "sg-09174af59fbc6257d",
            "dhcp_options_id": "dopt-04673c936318c4480",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09f1d2042f755c79d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-034838307ec4cbc59",
            "owner_id": "724772062958",
            "tags": {
              "Name": "rewear-vpc"
            },
            "tags_all": {
              "Name": "rewear-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}